context/source-materials/legacy/changeswork-full/planning/mvp/versions/v6.14/tasks/mvp_tasks_pilot_form.md
# Задачи для формы создания/редактирования Пилота

## Обзор

**Компонент:** Форма создания пилота и управления версиями Пилота
**Путь в макете:** Кнопка "Создать пилот" → форма / Кнопка "Создать новую версию" на детальной → форма
**Статус:** Адаптация существующей формы

### Что включает форма:

**Основные поля:**
- Название (обязательное)
- Внедрение (выбор из списка, обязательное)
- Скоркарты (множественный выбор, обязательно минимум 1)
- Описание (опционально)

**Функционал:**
- Создание нового пилота
- Создание новой версии существующего пилота (версионирование)
- Редактирование только черновиков/отклоненных версий (active-версия не редактируется in-place)
- Валидация полей
- Сохранение новой версии в статусе draft

> Правило MVP: изменения пилота вносятся только через **новую версию**. Старая версия остаётся активной до момента, пока новая версия не пройдёт согласование/утверждение и не будет опубликована (сделана текущей).

**Права доступа:**
- Создать может: ПРМ (свой продукт), Админ
- Редактировать может: ПРМ (свой продукт), Админ

---

## AN-PF1: Аналитика формы Пилота

**Тип:** Story
**Приоритет:** Средний
**Оценка:** 5 дней

### Summary
Детализация требований для адаптации формы создания/редактирования Пилота

### Description

Провести аналитику для адаптации формы Пилота:

1. **Детализация бизнес-требований:**
   - Определить обязательные и опциональные поля
   - Уточнить правила валидации (минимум 1 скоркарта)
   - Определить начальный статус (draft)

2. **Спецификация UI/UX:**
   - Дизайн формы (поля, кнопки)
   - Спецификация множественного выбора скоркарт
   - Спецификация валидации
   - Сообщения об ошибках

3. **Спецификация API контракта:**
   - POST /api/pilots/ - создание
   - POST /api/pilots/{id}/versions/ - создание новой версии пилота
   - PUT /api/pilot-versions/{version_id}/ - обновление версии (только draft/rejected)

### Acceptance Criteria

- [ ] Бизнес-требования задокументированы
- [ ] API контракт задокументирован
- [ ] UI/UX спецификация готова
- [ ] Документ согласован с заказчиком

### Dependencies
Нет

---

## BE-PF1: Backend для формы Пилота

**Тип:** Story
**Приоритет:** Средний
**Оценка:** 3 дня

### Summary
Адаптация Backend для создания/редактирования Пилота

### Description

Адаптировать Backend для формы Пилота:

1. **API Endpoint: POST /api/pilots/**

   **Параметры запроса:**
   ```json
   {
     "name": "Пилот Premium Q1 2026",
     "deployment_id": "uuid",
     "scorecard_ids": ["uuid1", "uuid2"],
     "description": "Описание пилота"
   }
   ```

   **Бизнес-логика:**
   - Валидация: название обязательно
   - Валидация: deployment_id обязателен и существует
   - Валидация: scorecard_ids обязателен, минимум 1 скоркарта
   - Валидация: все скоркарты существуют и принадлежат тому же продукту
   - Валидация: пользователь имеет право создавать (ПРМ своего продукта, Админ)
   - Создание пилота в статусе draft
   - Установка created_by = текущий пользователь
   - Связывание со скоркартами (многие-ко-многим)

2. **API Endpoint: POST /api/pilots/{id}/versions/**

   **Назначение:** создать новую версию пилота на основе текущей (active) или любой выбранной версии.

   **Параметры запроса:**
   ```json
   {
     "base_version_id": "uuid"
   }
   ```

   **Бизнес-логика:**
   - Валидация: пользователь имеет право создавать версию (ПРМ своего продукта, Админ)
   - Создание новой версии со статусом draft (копирование полей/связей из base_version)
   - Важно: текущая active-версия остаётся активной до публикации новой версии

3. **API Endpoint: PUT /api/pilot-versions/{version_id}/**

   **Параметры запроса:**
   ```json
   {
     "name": "Обновленное название",
     "scorecard_ids": ["uuid1", "uuid2", "uuid3"],
     "description": "Обновленное описание"
   }
   ```

   **Бизнес-логика:**
   - Валидация: пользователь имеет право редактировать
   - Валидация: версия пилота в статусе draft или approval_rejected/ratification_rejected (нельзя редактировать active/completed/archived)
   - Валидация: минимум 1 скоркарта
   - Обновление полей
   - Обновление связей со скоркартами

3. **Права доступа:**
   - Создать может: ПРМ (свой продукт), Админ
   - Редактировать может: ПРМ (свой продукт), Админ
   - HTTP 403 если нет прав

### Acceptance Criteria

- [ ] POST /api/pilots/ реализован
- [ ] POST /api/pilots/{id}/versions/ реализован
- [ ] PUT /api/pilot-versions/{version_id}/ реализован
- [ ] Валидация полей работает
- [ ] Валидация минимум 1 скоркарты работает
- [ ] Связывание со скоркартами работает
- [ ] Права доступа реализованы
- [ ] Unit тесты покрывают все сценарии (coverage > 80%)
- [ ] API документация обновлена

### Dependencies
- AN-PF1 (требуется спецификация)

---

## FE-PF1: Frontend для формы Пилота

**Тип:** Story
**Приоритет:** Средний
**Оценка:** 3 дня

### Summary
Адаптация UI формы создания/редактирования Пилота

### Description

Адаптировать Frontend для формы Пилота:

1. **Компонент PilotForm:**
   - Режим создания (create)
   - Режим редактирования (edit)
   - Валидация полей
   - Responsive дизайн

2. **Поля формы:**
   - Название (TextField, обязательное, max 255 символов)
   - Внедрение (Autocomplete, обязательное, только для создания)
   - Скоркарты (Autocomplete multiple, обязательное, минимум 1)
   - Описание (TextField multiline, опционально)

3. **Валидация:**
   - Название: обязательное, не пустое
   - Внедрение: обязательное (только при создании)
   - Скоркарты: обязательное, минимум 1 выбрана
   - Показ ошибок под полями

4. **Autocomplete для скоркарт:**
   - Множественный выбор
   - Поиск по названию
   - Отображение: ID + название + критичность
   - Фильтрация по продукту внедрения

5. **Кнопки:**
   - "Отмена" - закрытие формы без сохранения
   - "Сохранить" - сохранение и переход к детальной

6. **Loading и Error состояния:**
   - Disabled кнопка "Сохранить" при отправке
   - Spinner при сохранении
   - Toast уведомления при успехе/ошибке

7. **API интеграция:**
   - PilotService.create(data)
   - PilotService.createVersion(pilotId, baseVersionId)
   - PilotService.updateVersion(versionId, data)
   - DeploymentService.getList() - для выбора внедрения
   - ScorecardService.getList(productId) - для выбора скоркарт
   - Обработка ошибок (400, 403, 500)

### Acceptance Criteria

- [ ] PilotForm компонент реализован
- [ ] Режим создания работает
- [ ] Режим редактирования работает
- [ ] Валидация полей работает
- [ ] Валидация минимум 1 скоркарты работает
- [ ] Autocomplete для внедрения работает
- [ ] Autocomplete для скоркарт работает (множественный выбор)
- [ ] Фильтрация скоркарт по продукту работает
- [ ] Кнопки "Отмена" и "Сохранить" работают
- [ ] Loading состояние работает
- [ ] Error состояние отображается
- [ ] Toast уведомления работают
- [ ] Responsive дизайн работает
- [ ] API интеграция работает корректно
- [ ] Unit тесты для компонента (coverage > 70%)

### Dependencies
- AN-PF1 (требуется UI спецификация)
- BE-PF1 (требуется готовый API endpoint)

---

## Итоговая зависимость задач

```
AN-PF1 (0.5 дня)
  ↓
BE-PF1 (2 дня)
  ↓
FE-PF1 (3 дня)
```

**Общая длительность (критический путь):** 5.5 дней

---

## ✅ Ключевые особенности

1. **Адаптация существующей формы** - минимальные изменения
2. **Множественный выбор скоркарт** - обязательно минимум 1
3. **Валидация** - обязательные поля и минимум 1 скоркарта
4. **Autocomplete для скоркарт** - удобный множественный выбор
5. **Фильтрация скоркарт** - по продукту внедрения
6. **Права доступа** - ПРМ (свой продукт), Админ
7. **Статус draft** - при создании

---
